<resources>
    <string name="app_name">TWRPG</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TV_ITEM_NAME_ENG_TEXT">ItemNameEng</string>
    <string name="TV_ITEM_NAME_CHS_TEXT">ItemNameChs</string>
    <string name="TV_ITEM_LEVEL_TEXT">ItemLevel</string>
    <string name="TV_ITEM_QUALITY_TEXT">ItemQuality</string>
    <string name="TI_ITEMS_TAB_TEXT">Items</string>
    <string name="TI_UNITS_TAB_TEXT">Units</string>
</resources>
